--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   supabase_flutter: ^2.2.0
   timeago: ^3.6.0
   provider: ^6.1.1
+  formz: ^0.6.1
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +60,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
+  # Other config...
+
+# flutter:
+#   generate: true 
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
