--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
     sdk: flutter
   intl: any
   shared_preferences: ^2.2.2
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
