--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "chatbubble",
         "Cupertino",
         "customsnackbar",
+        "definie",
         "formz",
         "messagebar",
         "Newconversation",
