--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   intl: any
   shared_preferences: ^2.2.2
   connectivity_plus: ^5.0.2
+  url_strategy: ^0.2.0
+  go_router: ^13.1.0
+  swipe_to: ^1.0.6
  
 
 dev_dependencies:
